--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -15,7 +15,9 @@
     <rule ref="SlevomatCodingStandard.TypeHints.PropertyTypeHint">
         <type>warning</type>
     </rule>
-    <rule ref="SlevomatCodingStandard.TypeHints.ReturnTypeHint"/>
+    <rule ref="SlevomatCodingStandard.TypeHints.ReturnTypeHint">
+        <type>warning</type>
+    </rule>
     <rule ref="SlevomatCodingStandard.TypeHints.UselessConstantTypeHint"/>
     <rule ref="SlevomatCodingStandard.TypeHints.DeclareStrictTypes">
         <properties>
